package adapter;

public class OldTV {
    public void powerOn() {
        System.out.println("[OldTV] Vecchia tv ACCESA...");
    }

    public void powerOff() {
        System.out.println("[OldTV] Vecchia TV SPENTA....");
    }
}