@startuml
!pragma layout smetana
skinparam classAttributeIconSize 0

' composite e adapter
package "Composite & Adapter Patterns" <<Rectangle>> {

    interface SmartDevice {
        + activate() : void
        + deactivate() : void
        + getConsumption() : double
    }
    note left #81C784: **Component**\ninterfaccia comune per\ntutta la gerarchia.

   class LightBulb {
       - baseConsumption : double
       - isOn : boolean
       + LightBulb(baseConsumption: double)
       + activate() : void
       + deactivate() : void
       + getConsumption() : double
   }
   note bottom #E8F5E9: **Leaf**\ndispositivo smart.

    class Thermostat {
        - baseConsumption : double
        - isOn : boolean
        + Thermostat(baseConsumption: double)
        + activate() : void
        + deactivate() : void
        + getConsumption() : double
    }
    note bottom #E8F5E9: **Leaf**\ndispositivo smart

    class SmartCamera {
            - location : String
            - baseConsumption : double
            - isRecording : boolean
            + SmartCamera(location: String)
            + activate() : void
            + deactivate() : void
            + getConsumption() : double
            + getLiveFeed() : String
        }
    note bottom #E8F5E9: **Leaf**\nmostra il video\nagli observer.

    class Room {
        - name : String
        - devices : List<SmartDevice>
        + Room(name: String)
        + addDevice(device: SmartDevice) : void
        + activate() : void
        + deactivate() : void
        + getConsumption() : double
    }
    note top #A5D6A7: **Composite**\ncontenitore di dispositivi.

    class House {
        - name : String
        - devices : List<SmartDevice>
        + House(name: String)
        + addDevice(device: SmartDevice) : void
        + activate() : void
        + deactivate() : void
        + getConsumption() : double
    }
    note left #A5D6A7: **Root / Composite**\nradice della gerarchia\ndella casa.

    class OldSpeaker {
        + playMusic() : void
        + stopMusic() : void
    }
        note top: **Adaptee**\ndispositivo obsoleto con\ninterfaccia incompatibile.


    class OldSpeakerAdapter {
            - oldSpeaker : OldSpeaker
            - isPlaying : boolean
            - powerDraw : double
            + OldSpeakerAdapter(legacySpeaker: OldSpeaker)
            + activate() : void
            + deactivate() : void
            + getConsumption() : double
        }
    note bottom #FFE082: **Adapter**\nadatta OldSpeaker\na SmartDevice.

    class OldTV {
        + powerOn() : void
        + powerOff() : void
    }
    note top: **Adaptee**\ndispositivo obsoleto con\ninterfaccia incompatibile.

    class OldTVAdapter {
        - oldTV : OldTV
        - isOn : boolean
        - powerDraw : double
        + OldTVAdapter(vecchiaTV: OldTV)
        + activate() : void
        + deactivate() : void
        + getConsumption() : double
    }
    note bottom #FFE082: **Adapter**\nAdatta OldTV\na SmartDevice.

    ' relazioni composite
    SmartDevice <|.. LightBulb
    SmartDevice <|.. Thermostat
    SmartDevice <|.. SmartCamera
    SmartDevice <|.. Room
    SmartDevice <|.. House

    Room o--> SmartDevice : contains
    House o--> SmartDevice : contains

    ' relazioni adapter
    SmartDevice <|.. OldSpeakerAdapter
    SmartDevice <|.. OldTVAdapter
    OldSpeakerAdapter --> OldSpeaker : adapts
    OldTVAdapter --> OldTV : adapts
}

' observer e sensore che fa da ponte
package "Observer Pattern" <<Rectangle>> {

    interface "SensorObserver<T>" as SensorObserver {
        + update(event: T) : void
    }
    note top #B3E5FC: **Observer Interface**

    class SensorEvent {
        - message : String
        - location : String
        + SensorEvent(message: String, location: String)
        + getMessage() : String
        + getLocation() : String
    }
    note right #E1F5FE: **Contenuto dell'evento**

    class MobileApp {
        - securityCam : SmartCamera
        + MobileApp(securityCam: SmartCamera)
        + turnOn(device: SmartDevice, name: String) : void
        + turnOff(device: SmartDevice, name: String) : void
        + checkConsumption(device: SmartDevice, name: String) : void
        + update(event: SensorEvent) : void
    }
    note right #E1F5FE: **Concrete observer & Client**\ngestisce notifiche e\ncontrolla i dispositivi.

    class AlarmSystem {
        - isRinging : boolean
        + update(event: SensorEvent) : void
        + isRinging() : boolean
    }
    note bottom #E1F5FE: **Concrete Observer**

    class MotionSensor {
        - location : String
        - observers : List<SensorObserver<SensorEvent>>
        - isActive : boolean
        - powerDraw : double
        - notifyObservers(event: SensorEvent) : void
        + MotionSensor(location: String)
        + activate() : void
        + deactivate() : void
        + getConsumption() : double
        + attach(o: SensorObserver<SensorEvent>) : void
        + detach(o: SensorObserver<SensorEvent>) : void
        + detectIntruder() : void
    }
    note left #FFFFFF: Unione tra i pattern\ncomposite e observer.
    note left #E8F5E9: **Leaf**
    note left #90CAF9: **Subject**

    ' relazioni observer
    SmartDevice <|.. MotionSensor
    SensorObserver <|.. MobileApp
    SensorObserver <|.. AlarmSystem
    MotionSensor o--> SensorObserver : notifies
    MotionSensor ..> SensorEvent : creates

    ' connessioni della MobileApp
    MobileApp --> SmartCamera : gets feed from
    MobileApp ..> SmartDevice : controls
}

@enduml